--- a/app/views/post.erb
+++ b/app/views/post.erb
@@ -1,1 +1,14 @@
-# create post form here 
+<!-- create post form here --> 
+
+<div class="container">
+  <h1>Create Blog Post</h1>
+  <p>Blogs Away!</p>
+
+  <form>
+    Post title: <input type="text" name="title">
+    <p><br></p>
+    <textarea name="textarea" rows="10" cols="50">Write shit.</textarea>
+
+</div>
+
+
