functioning db, posts working

--- a/app/views/posts.erb
+++ b/app/views/posts.erb
@@ -1,3 +1,9 @@
 <!-- display all posts written here--> 
 
 <center> <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSrKCYNvpJUPFsB9LM58uSD6J7WvFOgRHu6xVJAjIA7NztLHgj92A"></img></center>
+
+<p>All posts will be listed here:</p>
+
+<% @posts.each do |post| %>
+  <li><%= post.title %> | <%= post.tags %></li>
+<% end %>    
