--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,7 +3,10 @@
   <p>Hey Brain, what should we do today?</p>
   <p>Same thing we do everyday Pinky, try to take over the world!</p>
 
-  <center><img height="300" src="http://images.alphacoders.com/192/192843.jpg"></img></center>
-    
+  <a href="/post"><center><img height="300" src="http://images.alphacoders.com/192/192843.jpg"></img></center></a>
+
 
 </div>
+
+
+
